<resources>
    <string name="app_name">GRP1</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="currentlocation">Current Location</string>
    <string name="lat">Lat</string>
    <string name="lng">Lng</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="heatmap">HeatMap</string>
    <string name="crimedata">Crime Data</string>
    <string name="yearp">Year</string>
    <string name="monthp">Month</string>


    <string-array name="month_arrays">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="year_arrays">
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
    </string-array>
</resources>
