<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="grp1.grp1.MapsActivity">


    <TextView
        android:id="@+id/latview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/clb"
        android:text="@string/latitude" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lngview"
        android:layout_marginTop="61dp"
        map:uiZoomControls="true"
        tools:context="grp1.grp1.MapsActivity"
        tools:layout="@android:layout/simple_gallery_item" />

    <Button
        android:id="@+id/clb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/currentlocation"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/lngview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/latview"
        android:layout_below="@+id/latview"
        android:text="@string/longitude" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/clb"
        android:text="@string/lat" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lngview"
        android:layout_alignBottom="@+id/lngview"
        android:layout_alignParentStart="true"
        android:layout_marginStart="46dp"
        android:text="@string/lng" />

    <Button
        android:id="@+id/hmb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/clb"
        android:layout_marginEnd="55dp"
        android:text="@string/heatmap" />

    <Button
        android:id="@+id/cdatab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="12dp"
        android:layout_toStartOf="@+id/lngview"
        android:text="@string/crimedata" />

    <Spinner
        android:id="@+id/cyear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cdatab"
        android:layout_alignBottom="@+id/cdatab"
        android:layout_alignStart="@+id/hmb"
        android:layout_marginStart="28dp"
        android:entries="@array/year_arrays"
        android:prompt="@string/yearp" />

    <Spinner
        android:id="@+id/cmonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cyear"
        android:layout_toEndOf="@+id/cdatab"
        android:layout_toStartOf="@+id/cyear"
        android:entries="@array/month_arrays"
        android:prompt="@string/monthp" />

</RelativeLayout>
